# SQLVec

./: LICENSE  README.md
SQLVec-db/: db_generate_duckdb.py
SQLVec-db/baseline_comparsion/: baseline_duckdb_vss.py
SQLVec-db/batched query/: SQLVec.py  SQLVec_opti.py
SQLVec-db/hybrid query/: SQLVec_acorn.py  cal_groundtruth.py
SQLVec-db/hybrid query/baseline/: baseline_post_filter.py  baseline_pre_filter.py
SQLVec-db/hybrid query/data4complex_sql/: trade.csv
SQLVec-db/hybrid query/groudtruth/: deep_24_gt.pkl
SQLVec-db/pq_intergation_cpp/: CMakeLists.txt  README.md  SQLVec.cpp  SQLVec_opti_nopq.cpp  SQLVec_opti_pq.cpp
SQLVec-db/pq_intergation_cpp/pq_generate/: pq_db_generate.py  pq_faiss.py  pq_lookup_table.py
SQLVec-db/single query/: SQLVec_cte.py  SQLVec_single.py
SQLVec-pg/: db_generate_pg.py
SQLVec-pg/baseline_comparsion/: baseline_pgvector.py  exact_knn.py
SQLVec-pg/batched query/: SQLVec.py  SQLVec_opti.py  SQLVec_plsql.py
SQLVec-pg/hybrid query/: SQLVec_acorn.py
SQLVec-pg/single query/: SQLVec_cte.py  SQLVec_plsql.py
dataload/: README.md  load_index.py
others/MariaDB/: SQLVec_batch.py  SQLVec_single.py  db_generate_mariaDB.py
others/kuzuDB/: SQLVec_single.py  db_generate.py
